src/app/layout/header/header.component.scss
@use 'variables' as *;

:host ::ng-deep .p-menu {
  min-width: 175px !important;
  width: auto !important;
  margin-top: 12px !important;
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 8px 20px;
  height: 64px;

  .logo-description-container {
    display: flex;
    align-items: center;
    width: 100%;
  }

  .logo-description {
    display: flex;
    align-items: center;
    height: 24px;
    font-weight: 700;
    gap: 12px;

    button {
      background: transparent;
      border: none;
      padding: 0;
      cursor: pointer;
      display: flex;
      align-items: center;
    }

    .divider {
      height: 100%;
      width: 1px;
      background-color: $surface-border;
    }
  }

  .container {
    display: flex;
    align-items: center;
    width: auto;
    height: 40px;
    padding: 0 16px;
    justify-content: flex-end;
    line-height: 150%;
    user-select: none;
    border: 1px solid $surface-border;
    border-radius: 5px;
    background: rgba(24, 24, 27, 0.42);
    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
  }
}

